# CI-Nanocourse

./: .gitignore  CODEX.md  pyproject.toml  pytest.ini  requirements.txt  requirements.yaml
.github/workflows/: build_docs.yaml  deploy.yml  push_checks.yaml
calculator-exercise/: README.md
ci_nanocourse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ci_slides/: README.md  package.json  pnpm-lock.yaml  slides.md
ci_slides/lectures/: lecture-01.md  lecture-02.md  lecture-03.md  lecture-04.md  lecture-05.md  lecture-06.md  lecture-07.md  lecture-08.md  lecture-09.md
ci_slides/pages/: intro.md  lecture_01.md  lecture_02.md  lecture_03.md  lecture_04.md  lecture_05.md  lecture_06.md  lecture_07.md  lecture_08.md  lecture_09.md  lecture_10.md
ci_slides/scripts/: add_selected_photos.py  convert_pptx_to_slidev.py  update_remainder_media.py
ci_slides/source_slides/lecture-05/: lecture-05.pptx
ci_slides/source_slides/lecture-06/: lecture-06.pptx
ci_slides/source_slides/lecture-07/: lecture-07.pptx
test/: conftest.py
