[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-nanocourse"
version = "0.1.0"
description = "A teaching repository for continuous integration with GitHub."
requires-python = ">=3.9.7"
dependencies = [
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
docs = [
    "numpydoc",
    "nbconvert",
    "sphinx<6.0.0",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx-issues",
    "sphinx-design",
    "pyyaml",
    "pydata_sphinx_theme==0.10.0rc2",
    "sphinx-toolbox",
    "mss",
    "codespell"
]
